# Assignment3

./: CMakeLists.txt
Assignment3/Client/: makefile
Assignment3/Client/include/: BGRSClient.h  MessageEncoderDecoder.h  MessageProtocol.h  Task.h
Assignment3/Client/src/: BGRSClient.cpp  Main.cpp  MessageEncoderDecoder.cpp  MessageProtocol.cpp  Task.cpp  connectionHandler.cpp  echoClient.cpp
Assignment3/Server/: Courses.txt
Assignment3/Server/src/main/java/bgu/spl/net/impl/BGRSServer/: ReactorMain.java  TPCMain.java
Assignment3/Server/src/main/java/bgu/spl/net/impl/messages/: ADMINREGProtocol.java  BGRSEncoderDecoder.java  BGRSProtocol.java
Assignment3/Server/src/main/java/bgu/spl/net/resources/: AVLTree.java  Admin.java  Course.java  Database.java  Student.java  User.java
Assignment3/Server/src/main/java/bgu/spl/net/srv/: Main.java  NonBlockingConnectionHandler.java  Reactor.java
Assignment3/Server/src/main/resources/: AVLTree.java  Admin.java  Course.java  Database.java  Student.java  User.java
